dev/styles/partials/_actionForm.scss
/* Action Form Component */

#create-action {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;

    input {
        width: 100%;
        border: 1px solid rgb(207, 207, 207);
        border-radius: 5px;
        margin: $base-spacing 0;
        padding: $base-spacing-rem/2 $base-spacing-rem/1.5;
    }

    @media (max-width: 480px) {
        flex-flow: column nowrap;
        align-items: stretch;
    }
}

.input-group {
    margin-right: $base-spacing * 2;
    flex-grow: 1;

    @media (max-width: 480px) {
        margin: 0 0 $base-spacing 0;
    }
}

